--- a/app/static/index.html
+++ b/app/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset=utf8>
+    <meta name=viewport content="width=device-width, initial-scale=1.0">
     <title>Exchange-R8s - Super awesome exchange rate app</title>
 </head>
 <body>
